--- a/deployment/ecommerce.service
+++ b/deployment/ecommerce.service
@@ -3,10 +3,10 @@ Description=E-commerce Flask Application
 After=network.target
 
 [Service]
-User=ubuntu
-WorkingDirectory=/home/ubuntu/ecommerce-app
-Environment="PATH=/home/ubuntu/ecommerce-app/venv/bin"
-ExecStart=/home/ubuntu/ecommerce-app/venv/bin/gunicorn -w 4 -b 127.0.0.1:8000 run:app
+User=ec2-user
+WorkingDirectory=/home/ec2-user/ecommerce-app
+Environment="PATH=/home/ec2-user/ecommerce-app/venv/bin"
+ExecStart=/home/ec2-user/ecommerce-app/venv/bin/gunicorn -w 4 -b 0.0.0.0:5000 run:app
 Restart=always
 
 [Install]
