--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-Flask>=3.0.0
-Flask-SQLAlchemy>=3.1.1
-Flask-Login>=0.6.3
-Flask-WTF>=1.2.1
-pytest>=7.4.3
-python-dotenv>=1.0.0
-gunicorn>=21.2.0
-bcrypt>=4.0.1
-email-validator>=2.1.0
-Werkzeug>=3.0.1
-SQLAlchemy>=2.0.23
-Flask-Migrate>=4.0.5 
+Flask<3.0.0
+Flask-SQLAlchemy<3.1.0
+Flask-Login<0.7.0
+Flask-WTF<1.3.0
+pytest<8.0.0
+python-dotenv<1.1.0
+gunicorn<24.0.0
+bcrypt<4.3.0
+email-validator<3.0.0
+Werkzeug<3.0.0
+SQLAlchemy<2.1.0
+Flask-Migrate<4.1.0 
